syntax = "proto3";
package proto;

option go_package = "./proto";

import "common.proto";
// DO NOT REMOVE THE COMMENTS
// BEGIN GENERATED
// PriestTalents message.
message PriestTalents {
    // Discipline
    int32 improved_power_word_shield = 1;
    int32 twin_disciplines = 2;
    int32 mental_agility = 3;
    int32 evangelism = 4;
    bool archangel = 5;
    int32 inner_sanctum = 6;
    int32 soul_warding = 7;
    int32 renewed_hope = 8;
    bool power_infusion = 9;
    int32 atonement = 10;
    bool inner_focus = 11;
    int32 rapture = 12;
    int32 borrowed_time = 13;
    int32 reflective_shield = 14;
    int32 strength_of_soul = 15;
    int32 divine_aegis = 16;
    bool pain_suppression = 17;
    int32 train_of_thought = 18;
    int32 focused_will = 19;
    int32 grace = 20;
    bool power_word_barrier = 21;
    // Holy
    int32 improved_renew = 22;
    int32 empowered_healing = 23;
    int32 divine_fury = 24;
    bool desperate_prayer = 25;
    int32 surge_of_light = 26;
    int32 inspiration = 27;
    int32 divine_touch = 28;
    int32 holy_concentration = 29;
    bool lightwell = 30;
    int32 tome_of_light = 31;
    bool rapid_renewal = 32;
    bool spirit_of_redemption = 33;
    int32 serendipity = 34;
    int32 body_and_soul = 35;
    bool chakra = 36;
    bool revelations = 37;
    int32 blessed_resilience = 38;
    int32 test_of_faith = 39;
    int32 heavenly_voice = 40;
    bool circle_of_healing = 41;
    bool guardian_spirit = 42;
    // Shadow
    int32 darkness = 43;
    int32 improved_shadow_word_pain = 44;
    int32 veiled_shadows = 45;
    int32 improved_psychic_scream = 46;
    int32 improved_mind_blast = 47;
    int32 improved_devouring_plague = 48;
    int32 twisted_faith = 49;
    bool shadowform = 50;
    int32 phantasm = 51;
    int32 harnessed_shadows = 52;
    bool silence = 53;
    bool vampiric_embrace = 54;
    int32 masochism = 55;
    int32 mind_melt = 56;
    int32 pain_and_suffering = 57;
    bool vampiric_touch = 58;
    int32 paralysis = 59;
    bool psychic_horror = 60;
    int32 sin_and_punishment = 61;
    int32 shadowy_apparition = 62;
    bool dispersion = 63;
}

enum PriestPrimeGlyph {
    PriestPrimeGlyphNone = 0;
    GlyphOfFlashHeal = 42400;
    GlyphOfLightwell = 42403;
    GlyphOfShadowWordPain = 42406;
    GlyphOfPowerWordBarrier = 42407;
    GlyphOfPowerWordShield = 42408;
    GlyphOfPrayerOfHealing = 42409;
    GlyphOfRenew = 42411;
    GlyphOfShadowWordDeath = 42414;
    GlyphOfMindFlay = 42415;
    GlyphOfDispersion = 45753;
    GlyphOfGuardianSpirit = 45755;
    GlyphOfPenance = 45756;
}

enum PriestMajorGlyph {
    PriestMajorGlyphNone = 0;
    GlyphOfCircleOfHealing = 42396;
    GlyphOfDispelMagic = 42397;
    GlyphOfFade = 42398;
    GlyphOfFearWard = 42399;
    GlyphOfHolyNova = 42401;
    GlyphOfInnerFire = 42402;
    GlyphOfMassDispel = 42404;
    GlyphOfPsychicHorror = 42405;
    GlyphOfPsychicScream = 42410;
    GlyphOfScourgeImprisonment = 42412;
    GlyphOfSmite = 42416;
    GlyphOfPrayerOfMending = 42417;
    GlyphOfSpiritTap = 45757;
    GlyphOfDivineAccuracy = 45758;
    GlyphOfDesperation = 45760;
}

enum PriestMinorGlyph {
    PriestMinorGlyphNone = 0;
    GlyphOfFading = 43342;
    GlyphOfLevitate = 43370;
    GlyphOfFortitude = 43371;
    GlyphOfShadowProtection = 43372;
    GlyphOfShackleUndead = 43373;
    GlyphOfShadowfiend = 43374;
    GlyphOfShadow = 77101;
}

// END GENERATED

message PriestOptions {
	enum Armor {
		NoArmor = 0;
		InnerFire = 1;
	}
	Armor armor = 1;
	bool use_shadowfiend = 2;
}

message DisciplinePriest {
	message Rotation {}

	message Options {
		PriestOptions class_options = 1;
		UnitReference power_infusion_target = 2;
	}
	Options options = 3;
}

message HolyPriest {
	message Rotation {}

	message Options {
		PriestOptions class_options = 1;
	}
	Options options = 3;
}

message ShadowPriest {
	message Rotation {}

	message Options {
		PriestOptions class_options = 1;
		UnitReference power_infusion_target = 2;
	}
	Options options = 3;
}
